<resources>
    <string name="app_name" translatable="false">一元课堂</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="network_errors" translatable="false">网络异常</string>
    <string name="network_timeout" translatable="false">网络超时</string>
    <string name="json_syntax_error" translatable="false">JSON异常</string>
    <string name="unknown_error" translatable="false">未知异常</string>
    <string name="community_collection_false" translatable="false">取消收藏</string>
    <string name="another_press_return_key_to_exit" translatable="false">再按一次返回键退出</string>
    <string name="emptyLoadFail" translatable="false">加载失败,点击重试</string>
    <string name="loading" translatable="false">加载中,请稍后...</string>
    <string name="load_failed" translatable="false">加载失败</string>
    <string name="nothing_error" translatable="false">暂无数据</string>
    <string name="add_address" translatable="false">添加一个地址吧</string>
    <string name="nothing_cache" translatable="false">暂无缓存数据哦</string>
    <string name="reload_the" translatable="false">重新加载</string>
    <string name="nothing_couser_error" translatable="false">暂无课程哦</string>
    <string name="nothing_couser_vod_error" translatable="false">暂无课程视频哦</string>
    <string name="nothing_content_error" translatable="false">沒有相关内容哦</string>
    <string name="nothing_couser_play_back_error" translatable="false">还没有回放视频哦</string>
    <string name="nothing_couser_time_table_error" translatable="false">还没有课程表哦</string>
    <string name="nothing_bigpackage_error" translatable="false">暂无大礼包哦</string>
    <string name="nothing_want_to_couser_error" translatable="false">没有您想要的课程哦</string>
    <string name="txt_search" translatable="false">搜一搜</string>
    <string name="nothing_want_to_collection_error" translatable="false">您还没有任何收藏哦</string>
    <string name="nothing_live_today_error" translatable="false">今日暂无直播哦</string>
    <string name="decide_to_delete_the_course" translatable="false">确定删除该课程?</string>
    <string name="network_error" translatable="false">请速速检查网络</string>
    <string name="looking_forward" translatable="false">敬请期待!</string>
    <string name="ok" translatable="false">确定</string>
    <string name="data_error" translatable="false">数据错误</string>
    <string name="send_code_failed" translatable="false">发送验证码失败</string>
    <string name="loading_sms" translatable="false">正在发送...</string>
    <string name="loading_login" translatable="false">正在登录...</string>
    <string name="loading_rigister" translatable="false">正在注册...</string>
    <string name="loading_now" translatable="false">正在加载...</string>
    <string name="complete" translatable="false">完成</string>
    <string name="change_success" translatable="false">修改成功</string>
    <string name="invalid_link" translatable="false">无效链接</string>
    <string name="nothing_all_order" translatable="false">您还没有订单哦</string>
    <string name="nothing_message" translatable="false">暂无任何消息</string>
    <string name="nothing_unfinish_order" translatable="false">您还没有未完成的订单哦</string>
    <string name="nothing_completed_order" translatable="false">您还没有已完成的订单哦</string>
    <string name="nothing_expired_order" translatable="false">您还没有已过期的订单哦</string>
    <string name="text_prompt" translatable="false">温馨提示</string>
    <string name="prompt" translatable="false">提示</string>
    <string name="please_fill_in_the_graphical_verification_code" translatable="false">请填写图形验证码</string>
    <string name="un_available_coupons" translatable="false">暂无优惠券哦！</string>
    <string name="text_home_page" translatable="false">首页</string>
    <string name="text_player" translatable="false">点播</string>
    <string name="text_course" translatable="false">课程</string>
    <string name="text_test" translatable="false">题库</string>
    <string name="text_my" translatable="false">我的</string>
    <string name="text_commonly_used" translatable="false">常用</string>
    <string name="text_other" translatable="false">其他</string>
    <string name="live_today" translatable="false">今日直播</string>
    <string name="text_hot_recommended" translatable="false">好课推荐</string>
    <string name="every_day_study" translatable="false">每日学习</string>
    <string name="public_office_is_inviting_teachers_to_interview" translatable="false">公办招教教师面试</string>
    <string name="public_office_is_qualificon_teachers" translatable="false">公办教师资格证</string>
    <string name="txt_written_test" translatable="false">笔试</string>
    <string name="txt_interview_test" translatable="false">面试</string>
    <string name="press_the_exit_procedure_again" translatable="false">再按一次退出程序</string>
    <string name="text_message" translatable="false">消息</string>
    <string name="text_system_message" translatable="false">系统消息</string>
    <string name="text_gift_bag" translatable="false">礼包</string>
    <string name="text_book" translatable="false">图书</string>
    <string name="text_live" translatable="false">直播</string>
    <string name="text_on_demand" translatable="false">点播</string>
    <string name="text_exam_type" translatable="false">考试类型</string>
    <string name="text_learning_period" translatable="false">学段</string>
    <string name="text_subject_type" translatable="false">学科</string>
    <string name="text_test_area" translatable="false">考试地区</string>
    <string name="text_area" translatable="false">地区</string>
    <string name="text_examineway" translatable="false">笔试面试</string>
    <string name="text_examineway_j" translatable="false">笔试/面试</string>
    <string name="text_subjects" translatable="false">科目</string>
    <string name="title_change_examination_type" translatable="false">更改考试类型</string>
    <string name="text_save" translatable="false">保存</string>
    <string name="text_blockbuster" translatable="false">重磅</string>
    <string name="listening_test" translatable="false">试听</string>
    <string name="select_province" translatable="false">选择省份</string>
    <string name="location_recent_access" translatable="false">定位/最近访问</string>
    <string name="hot_city" translatable="false">热门地区</string>
    <string name="title_live_today" translatable="false">今日直播</string>
    <string name="live_in_the" translatable="false">直播中</string>
    <string name="see_the_replay" translatable="false">看回放</string>
    <string name="not_at_the" translatable="false">未开始</string>
    <string name="study_list" translatable="false">学习列表</string>
    <string name="have_to_buy" translatable="false">已购买</string>
    <string name="not_to_buy" translatable="false">未购买</string>
    <string name="buy_now" translatable="false">立即购买</string>
    <string name="free" translatable="false">#免费</string>
    <string name="have_to_collection" translatable="false">已收藏</string>
    <string name="collection" translatable="false">收藏</string>
    <string name="login" translatable="false">登录</string>
    <string name="register" translatable="false">注册</string>
    <string name="moblie_register" translatable="false">手机注册</string>
    <string name="forget_password" translatable="false">忘记密码?</string>
    <string name="come_back_password" translatable="false">找回密码</string>
    <string name="next" translatable="false">下一步</string>
    <string name="customer_service" translatable="false">注册登录相关问题,请联系客服4006003363</string>
    <string name="text_third_party" translatable="false">第三方账号登录</string>
    <string name="china" translatable="false">中国</string>
    <string name="the_teacher_is_using_artifact" translatable="false">Copyright ©2017-2018 1211</string>
    <string name="please_enter_your_mobile_number" translatable="false">请输入手机号码</string>
    <string name="please_enter_your_account_number" translatable="false">请输入账号、手机号码</string>
    <string name="mobile_password_login" translatable="false">手机密码登录</string>
    <string name="please_enter_your_password" translatable="false">请输入密码</string>
    <string name="please_enter_your_nickname" translatable="false">请输入昵称</string>
    <string name="text_setting_6_20_password" translatable="false">设置6-20位密码</string>
    <string name="please_enter_your_10_nickname" translatable="false">请填写10个字以内昵称</string>
    <string name="select_type" translatable="false">选择类型</string>
    <string name="please_select_type" translatable="false">请选择类型</string>
    <string name="please_enter_your_verification_code" translatable="false">请输入验证码</string>
    <string name="verification_code" translatable="false">验证码</string>
    <string name="img_verification_code" translatable="false">图形验证码</string>
    <string name="img_verification_code_null" translatable="false">图形验证码不能为空</string>
    <string name="six_verification_codes_have_been_sent" translatable="false">已发送6位验证码至</string>
    <string name="get_verification_code" translatable="false">获取验证码</string>
    <string name="to_resend" translatable="false">重新发送</string>
    <string name="password_login" translatable="false">密码登陆</string>
    <string name="this_user_not_null" translatable="false">帐号不能为空</string>
    <string name="the_phone_number_format_is_not_correct" translatable="false">手机号格式不正确</string>
    <string name="the_phone_number_is_null" translatable="false">手机号不能为空</string>
    <string name="verify_that_the_code_cannot_be_empty" translatable="false">验证码不能为空</string>
    <string name="phone_digits" translatable="false">0123456789</string>
    <string name="password_digits" translatable="false">0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="find_password_digits" translatable="false">0123456789abcdefghijklmnopqrstuvwxyz
ABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+</string>
    <string name="weichat" translatable="false">微信</string>
    <string name="qq" translatable="false">QQ</string>
    <string name="weichat_friends" translatable="false">朋友圈</string>
    <string name="weibo" translatable="false">微博</string>
    <string name="bt_defulte" translatable="false">设置默认</string>
    <string name="text_my_order" translatable="false">我的订单</string>
    <string name="text_my_collection" translatable="false">我的收藏</string>
    <string name="text_commodity_exchange" translatable="false">课程兑换</string>
    <string name="text_my_course" translatable="false">我的课程</string>
    <string name="text_course_history" translatable="false">课程历史</string>
    <string name="text_my_balance" translatable="false">余额(0)</string>
    <string name="text_cache_record" translatable="false">我的缓存</string>
    <string name="text_use_helper" translatable="false">使用帮助</string>
    <string name="text_address_management" translatable="false">地址管理</string>
    <string name="text_appointment_center" translatable="false">预约中心</string>
    <string name="text_online_customer_service" translatable="false">客服</string>
    <string name="text_recommend_our" translatable="false">推荐我们</string>
    <string name="feekback" translatable="false">意见反馈</string>
    <string name="text_my_settings" translatable="false">设置</string>
    <string name="text_clear_cache" translatable="false">清理缓存</string>
    <string name="text_setting_password" translatable="false">设置密码</string>
    <string name="text_change_password" translatable="false">修改密码</string>
    <string name="text_update_app" translatable="false">更新</string>
    <string name="text_logout" translatable="false">退出账号</string>
    <string name="please_enter_your_password_again" translatable="false">请再次输入密码</string>
    <string name="please_selector" translatable="false">请选择</string>
    <string name="text_consignee" translatable="false">收货人</string>
    <string name="contact_phone_number" translatable="false">联系电话</string>
    <string name="in_the_area" translatable="false">所在地区</string>
    <string name="please_enter_the_detailed_address" translatable="false">请输入详细地址</string>
    <string name="text_consulting" translatable="false">咨询</string>
    <string name="text_listen_now" translatable="false">立即试听</string>
    <string name="text_buy_now" translatable="false">立即购买</string>
    <string name="please_write" translatable="false">请输入</string>
</resources>