<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchMatch.Vertical"
    android:background="@color/white">

    <include layout="@layout/title_text_text_layout" />

    <com.zhy.autolayout.AutoLinearLayout
        style="@style/MatchWrap.Horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            style="@style/text_black14_wrap"
            android:text="@string/text_consignee" />

        <EditText
            android:id="@+id/et_consignee_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/please_write"
            android:inputType="textPersonName"
            android:lines="1"
            android:textColor="@color/text_gray"
            android:textColorHint="@color/c_c1c1"
            android:textSize="14dp" />


    </com.zhy.autolayout.AutoLinearLayout>

    <include layout="@layout/include_lines_f7f7" />

    <com.zhy.autolayout.AutoLinearLayout
        style="@style/MatchWrap.Horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            style="@style/text_black14_wrap"
            android:text="@string/contact_phone_number" />

        <EditText
            android:id="@+id/et_contact_phone_number"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:background="@null"
            android:gravity="right|center_vertical"
            android:hint="@string/please_write"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="11"
            android:textColor="@color/text_gray"
            android:textColorHint="@color/c_c1c1"
            android:textSize="14dp" />

    </com.zhy.autolayout.AutoLinearLayout>

    <include layout="@layout/include_lines_f7f7" />

    <com.zhy.autolayout.AutoLinearLayout
        style="@style/MatchWrap.Horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            style="@style/text_black14_wrap"
            android:text="@string/in_the_area" />

        <TextView
            android:id="@+id/txt_in_the_area"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:gravity="right|center_vertical"
            android:hint="@string/please_selector"
            android:textColor="@color/text_gray"
            android:textColorHint="@color/c_c1c1"
            android:textSize="14dp" />

    </com.zhy.autolayout.AutoLinearLayout>

    <include layout="@layout/include_lines_f7f7" />

    <EditText
        android:id="@+id/et_detailed_address"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/c_f5"
        android:gravity="left"
        android:hint="@string/please_enter_the_detailed_address"
        android:inputType="textMultiLine|text"
        android:padding="15dp"
        android:textColor="@color/c_7a7a"
        android:textColorHint="@color/c_c1c1"
        android:textSize="14dp" />

    <include layout="@layout/include_lines_f7f7" />
</com.zhy.autolayout.AutoLinearLayout>