<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <LinearLayout
        android:id="@+id/ll_top"
        style="@style/MatchWrap.Vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="27dp">

            <com.android.tool.widget.wheelview.ClearEditText
                android:id="@+id/edit_mobile"
                style="@style/MatchMatch"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:hint="@string/please_enter_your_account_number"
                android:paddingLeft="10dp"
                android:inputType="text"
                android:maxLength="20"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/c_c1c1"
                android:textSize="17sp"
                tools:ignore="TextFields" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/c_e7e7" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/edit_password"
                style="@style/MatchMatch"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/iv_eye"
                android:background="@null"
                android:hint="@string/please_enter_your_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:paddingLeft="10dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/c_c1c1"
                android:textSize="17sp"
                tools:ignore="TextFields" />

            <ImageView
                android:id="@+id/iv_eye"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?android:actionBarItemBackground"
                android:padding="15dp"
                android:src="@mipmap/eye_open_icon"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/c_e7e7" />
        </RelativeLayout>

        <TextView
            android:id="@+id/bt_ok"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/ok_gray_false_selector"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="17sp" />
_
        <TextView
            android:id="@+id/txt_customer_service"
            style="@style/text_c666_11_wrap"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="?android:actionBarItemBackground"
            android:text="@string/customer_service" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        style="@style/MatchWrap.Horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_moblie_rigister"
            style="@style/text_c7786_14_wrap"
            android:layout_marginRight="8dp"
            android:background="?android:actionBarItemBackground"
            android:padding="10dp"
            android:text="@string/moblie_register" />

        <View
            android:layout_width="2dp"
            android:layout_height="15dp"
            android:background="@color/c_bbbb" />

        <TextView
            android:id="@+id/txt_forget_password"
            style="@style/text_c7786_14_wrap"
            android:layout_marginLeft="8dp"
            android:background="?android:actionBarItemBackground"
            android:padding="10dp"
            android:text="@string/forget_password" />
    </LinearLayout>
</RelativeLayout>