<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch">

    <com.android.tool.widget.MyScrollView style="@style/MatchMatch">

        <RelativeLayout
            style="@style/MatchMatch"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="80dp">

            <LinearLayout
                android:id="@+id/ll_top"
                style="@style/MatchWrap.Vertical">

                <TextView
                    android:id="@+id/txt_title"
                    style="@style/text_c33_22_wrap"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/come_back_password"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="50dp">

                    <EditText
                        android:id="@+id/edit_mobile"
                        style="@style/MatchMatch"
                        android:layout_centerVertical="true"
                        android:background="@null"
                        android:digits="@string/phone_digits"
                        android:hint="@string/please_enter_your_mobile_number"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:paddingLeft="10dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/c_c1c1"
                        android:textSize="16sp"
                        tools:ignore="TextFields" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/c_e7e7" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp">

                    <EditText
                        android:id="@+id/edit_verification_code"
                        style="@style/MatchMatch"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/ll_get_code"
                        android:background="@null"
                        android:digits="@string/phone_digits"
                        android:hint="@string/please_enter_your_verification_code"
                        android:inputType="phone"
                        android:maxLength="6"
                        android:paddingLeft="10dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/c_c1c1"
                        android:textSize="16sp"
                        tools:ignore="TextFields" />

                    <LinearLayout
                        android:id="@+id/ll_get_code"
                        android:layout_width="130dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_get_verification_code"
                            style="@style/text_white13_wrap"
                            android:background="@drawable/login_code_bt_false"
                            android:paddingBottom="6dp"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:paddingTop="6dp"
                            android:text="@string/get_verification_code" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/c_e7e7" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/next_ok"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/ok_gray_false_selector"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>


        </RelativeLayout>
    </com.android.tool.widget.MyScrollView>

    <LinearLayout
        style="@style/WrapWrap.Vertical"
        android:layout_marginTop="20dp">

        <include layout="@layout/include_back_layout" />
    </LinearLayout>
</RelativeLayout>